--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,24 +24,24 @@
   },
   "homepage": "https://github.com/cheangdominic/2800-202510-BBY12#readme",
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "express": "^5.1.0",
-    "tailwindcss": "^4.1.5",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
     "@tailwindcss/vite": "^4.1.5",
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "express": "^5.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.4"
   }
 }
