--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "concurrently": "^9.1.2",
     "express": "^5.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
