--- a/package.json
+++ b/package.json
@@ -2,33 +2,22 @@
   "name": "comp-2800---projects-2",
   "private": true,
   "version": "1.0.0",
-  "description": "This is the dev file.",
-  "type": "commonjs",
+  "description": "Fullstack app with Express + Vite React.",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cheangdominic/2800-202510-BBY12.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cheangdominic/2800-202510-BBY12/issues"
-  },
-  "homepage": "https://github.com/cheangdominic/2800-202510-BBY12#readme",
+  "dev": "concurrently \"npm run server\" \"npm run client\"",
+  "server": "nodemon src/backend/server.js",  
+  "client": "vite",  
+  "build": "vite build",
+  "preview": "vite preview",
+  "lint": "eslint .",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.5",
     "bcrypt": "^5.1.1",
-    "concurrently": "^9.1.2",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -45,6 +34,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
