--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
@@ -45,6 +46,6 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.4"
+    "vite": "^6.3.5"
   }
 }
