--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "description": "Fullstack app with Express + Vite React.",
   "type": "module",
   "scripts": {
-  "dev": "concurrently \"npm run server\" \"npm run client\"",
-  "server": "nodemon src/backend/server.js",  
-  "client": "vite",  
-  "build": "vite build",
-  "preview": "vite preview",
-  "lint": "eslint .",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon src/backend/server.js",
+    "client": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
@@ -22,6 +22,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.10.1",
     "joi": "^17.13.3",
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
