--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.0",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.508.0",
     "mongodb": "^6.16.0",
     "nodemon": "^3.1.10",
+    "openai": "^4.98.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
