--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -28,6 +29,8 @@
     "joi": "^17.13.3",
     "lucide-react": "^0.508.0",
     "mongodb": "^6.16.0",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
