--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi": "^17.13.3",
     "lucide-react": "^0.508.0",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.14.3",
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
