--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon src/backend/server.js",
     "client": "vite",
-    "build": "vite build && cd src/backend && npm install",
+    "build": "vite build && npm install",
     "preview": "vite preview",
-    "start": "node .src/backend/server.js",
+    "start": "node src/backend/server.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
