--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^2.2.0",
     "cloudinary": "^1.41.3",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
